Correction du menu - version mobile

--- a/css/style-2.css
+++ b/css/style-2.css
@@ -617,6 +617,11 @@ footer {
 		width: 100%;
   }
 
+  ul.menu {
+    gap: 0px;
+    }
+    
+
   .info {
     width: 100%;
     height: 432px;
